[tool.poetry]
name = "datasakura-test"
version = "0.1.0"
description = ""
authors = ["Sergey Udachin <s.udachin@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.111.0"
pytest = "^8.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
